# craftinginterpreters

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp
src/: errorreport.cpp  errorreport.h  expr.cpp  expr.h  interpreter.cpp  interpreter.h  lex.cpp  lex.h  object.h  parser.cpp  parser.h  printer.cpp  printer.h  statement.cpp  statement.h  types.h
test/: CMakeLists.txt  errorreport_test.cpp  interpreter_test.cpp  lex_test.cpp  object_test.cpp  parser_test.cpp
test/lox_program/: lox_1.lox  lox_2.lox
test/script/: gdb_command.py  gdb_driver.py
